Crash in compositor with particular group node setup #86710

Closed
opened 2021-03-18 16:52:33 +01:00 by Ryan McClure · 9 comments

System Information
Operating system: Linux-5.4.0-67-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-16 15:02, hash: 93e2491ee72487
Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-16 14:15, hash: 4ca8e09b24defc
Caused by {93e2491ee724874a28030ae4d32f39bed6835923}

Short description of error
Upon completion of a render, or upon adding the group node "Lens Dust" to the compositor node setup in the attached Blend file, Blender immediately crashes with a segmentation fault.

Exact steps for others to reproduce the error

  1. Open attached Blend file.
  2. Note the attached "Lens Dust" group node in the compositor. This was attached in a build from the last working commit, listed above.
  3. In the compositor, Add > Group > Lens Dust
  4. Observe immediate segmentation fault.

blender_debug_output.txt
crash_compositor_group_node.crash.txt
crash_compositor_group_node.blend

On Blender.chat, I was told by Jeroen Bakker to attach them to this bug report.

**System Information** Operating system: Linux-5.4.0-67-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-16 15:02, hash: `93e2491ee72487` Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-16 14:15, hash: `4ca8e09b24defc` Caused by {93e2491ee724874a28030ae4d32f39bed6835923} **Short description of error** Upon completion of a render, or upon adding the group node "Lens Dust" to the compositor node setup in the attached Blend file, Blender immediately crashes with a segmentation fault. **Exact steps for others to reproduce the error** 1. Open attached Blend file. 2. Note the attached "Lens Dust" group node in the compositor. This was attached in a build from the last working commit, listed above. 3. In the compositor, Add > Group > Lens Dust 4. Observe immediate segmentation fault. [blender_debug_output.txt](https://archive.blender.org/developer/F9898213/blender_debug_output.txt) [crash_compositor_group_node.crash.txt](https://archive.blender.org/developer/F9898215/crash_compositor_group_node.crash.txt) [crash_compositor_group_node.blend](https://archive.blender.org/developer/F9898206/crash_compositor_group_node.blend) On Blender.chat, I was told by Jeroen Bakker to attach them to this bug report.
Author

Added subscriber: @IHaveThatPower

Added subscriber: @IHaveThatPower
Jeroen Bakker was assigned by Ryan McClure 2021-03-18 16:53:17 +01:00
Author

The following is what I get from gdb with a Debug build following the same steps, should it be useful:

/home/mcc/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x39) [0xabaaa03]
/home/mcc/blender-git/build_linux/bin/blender(_BLI_assert_print_backtrace+0x1a) [0xaa7c8a9]
/home/mcc/blender-git/build_linux/bin/blender(_ZN7blender3MapIP18NodeOperationInputP9NodeInputLl4ENS_21PythonProbingStrategyILm1ELb0EEENS_11DefaultHashIS2_EENS_15DefaultEqualityENS_16IntrusiveMapSlotIS2_S4_NS_14PointerKeyInfoIS2_EEEENS_16GuardedAllocatorEE9lookup_asIS2_EERS4_RKT_+0x37) [0x4251ec7]
/home/mcc/blender-git/build_linux/bin/blender(_ZN7blender3MapIP18NodeOperationInputP9NodeInputLl4ENS_21PythonProbingStrategyILm1ELb0EEENS_11DefaultHashIS2_EENS_15DefaultEqualityENS_16IntrusiveMapSlotIS2_S4_NS_14PointerKeyInfoIS2_EEEENS_16GuardedAllocatorEE6lookupERKS2_+0x27) [0x4250b45]
/home/mcc/blender-git/build_linux/bin/blender(_ZN20NodeOperationBuilder29add_operation_input_constantsEv+0x14d) [0x424d827]
/home/mcc/blender-git/build_linux/bin/blender(_ZN20NodeOperationBuilder19convertToOperationsEP15ExecutionSystem+0x3de) [0x424cc7c]
/home/mcc/blender-git/build_linux/bin/blender(_ZN15ExecutionSystemC1EP10RenderDataP5SceneP9bNodeTreebbPK24ColorManagedViewSettingsPK27ColorManagedDisplaySettingsPKc+0x252) [0x4249ace]
/home/mcc/blender-git/build_linux/bin/blender(COM_execute+0x268) [0x4249737]
/home/mcc/blender-git/build_linux/bin/blender(ntreeCompositExecTree+0x4c) [0x3db9ef5]
/home/mcc/blender-git/build_linux/bin/blender() [0x48d9be5]
/home/mcc/blender-git/build_linux/bin/blender() [0x386566a]
/home/mcc/blender-git/build_linux/bin/blender() [0xabb62ae]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x9609) [0x7ffff7c53609]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x43) [0x7fffedb3f293]
BLI_assert failed: source/blender/blenlib/BLI_map.hh:513, lookup_as(), at 'ptr != nullptr'

Thread 40 "blender" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffa9dff700 (LWP 1278846)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
50	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.

The following is what I get from gdb with a Debug build following the same steps, should it be useful: ``` /home/mcc/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x39) [0xabaaa03] /home/mcc/blender-git/build_linux/bin/blender(_BLI_assert_print_backtrace+0x1a) [0xaa7c8a9] /home/mcc/blender-git/build_linux/bin/blender(_ZN7blender3MapIP18NodeOperationInputP9NodeInputLl4ENS_21PythonProbingStrategyILm1ELb0EEENS_11DefaultHashIS2_EENS_15DefaultEqualityENS_16IntrusiveMapSlotIS2_S4_NS_14PointerKeyInfoIS2_EEEENS_16GuardedAllocatorEE9lookup_asIS2_EERS4_RKT_+0x37) [0x4251ec7] /home/mcc/blender-git/build_linux/bin/blender(_ZN7blender3MapIP18NodeOperationInputP9NodeInputLl4ENS_21PythonProbingStrategyILm1ELb0EEENS_11DefaultHashIS2_EENS_15DefaultEqualityENS_16IntrusiveMapSlotIS2_S4_NS_14PointerKeyInfoIS2_EEEENS_16GuardedAllocatorEE6lookupERKS2_+0x27) [0x4250b45] /home/mcc/blender-git/build_linux/bin/blender(_ZN20NodeOperationBuilder29add_operation_input_constantsEv+0x14d) [0x424d827] /home/mcc/blender-git/build_linux/bin/blender(_ZN20NodeOperationBuilder19convertToOperationsEP15ExecutionSystem+0x3de) [0x424cc7c] /home/mcc/blender-git/build_linux/bin/blender(_ZN15ExecutionSystemC1EP10RenderDataP5SceneP9bNodeTreebbPK24ColorManagedViewSettingsPK27ColorManagedDisplaySettingsPKc+0x252) [0x4249ace] /home/mcc/blender-git/build_linux/bin/blender(COM_execute+0x268) [0x4249737] /home/mcc/blender-git/build_linux/bin/blender(ntreeCompositExecTree+0x4c) [0x3db9ef5] /home/mcc/blender-git/build_linux/bin/blender() [0x48d9be5] /home/mcc/blender-git/build_linux/bin/blender() [0x386566a] /home/mcc/blender-git/build_linux/bin/blender() [0xabb62ae] /lib/x86_64-linux-gnu/libpthread.so.0(+0x9609) [0x7ffff7c53609] /lib/x86_64-linux-gnu/libc.so.6(clone+0x43) [0x7fffedb3f293] BLI_assert failed: source/blender/blenlib/BLI_map.hh:513, lookup_as(), at 'ptr != nullptr' Thread 40 "blender" received signal SIGABRT, Aborted. [Switching to Thread 0x7fffa9dff700 (LWP 1278846)] __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50 50 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory. ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

I was about to report a segmentation fault while using the compositor also... not sure if it's related but I'm working on green screen footage using the keying node and when I change the feather distance value blender closes. The other way is when I connect some mask input to the garbage or core matte socket, It closes immediately. I need to use the 2.92 release to continue my work. It's working really well with the 2.92 release.

I was about to report a segmentation fault while using the compositor also... not sure if it's related but I'm working on green screen footage using the keying node and when I change the feather distance value blender closes. The other way is when I connect some mask input to the garbage or core matte socket, It closes immediately. I need to use the 2.92 release to continue my work. It's working really well with the 2.92 release.

This issue was referenced by 64a413b0c7

This issue was referenced by 64a413b0c74115251712c90e62ffd4cb8fa2a539
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#86710
No description provided.