Fix T86710: Crash When Adding Node Group.

When adding a node group there can be no inputs in the input map that
was triggering an assert.